added reference for principal curves paper to bibFile and changed how I cite it in the slingshot vignette

--- a/vignettes/bibFile.bib
+++ b/vignettes/bibFile.bib
@@ -16,3 +16,14 @@
   pages={1--13},
   year={2015}
 }
+
+@article{princurve,
+  title={Principal Curves},
+  author={Trevor Hastie and Werner Stuetzle},
+  journal={Journal of the American Statistical Association},
+  volume={84},
+  number={406},
+  pages={502-516},
+  year={1989}
+}
+
